style: 파일 이름 수정, 코드 확인
- 기존 에러 해결을 위해 설치한 내용이 정리가 안 되어서 정리 후 다시 생성
- 아직 해결되지 않는 에러가 있음 // 같은 방법으로 해결할 시에 계속
  문제가 파생되므로 일단 보류

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": ["eslint:recommended", "prettier"],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": ["react/babel", "eslint:recommended", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {}
 }
