--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.47.3"
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "msw": "^0.47.3",
+    "prettier": "^2.7.1"
   },
   "msw": {
     "workerDirectory": "public"
