--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,10 @@
         "browser": true,
         "es6": true
     },
-    "extends": ["eslint:recommended", "prettier"],
+    "extends": ["react-app", "eslint:recommended", "prettier"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
 }
