hooks의 deps에 대한 lint를 추가했습니다.
- 공홈 참고하여 진행했어요
(https://reactjs.org/docs/hooks-rules.html#eslint-plugin)
- 추가로.. lint 서버가 뜨지 못하여 확인해보니 extends에 추가된 prettier가 없다고 나오네요
- eslint-config-prettier 추가하니 eslint잘 돕니다
- 또, cra에서 pacakage.json에 lint 설정이 추가되있었는데 eslintrc.json과 중복되어 제거했습니다.

--- a/package.json
+++ b/package.json
@@ -20,12 +20,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
     "msw": "^0.47.3"
   },
   "msw": {
