--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "recoil": "^0.7.5",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
